--- a/peachc.html
+++ b/peachc.html
@@ -26,7 +26,7 @@
     />
     <!-- style.css -->
     <link rel="stylesheet" href="./project/peachc/common/style/style.css" />
-
+    <link rel="stylesheet" href="./project/peachc/common/style/swiperCss.css" />
     <!-- jQuery-->
     <script src="
   https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
@@ -42,7 +42,7 @@
     />
 
     <!-- Demo styles -->
-    <style>
+    <!-- <style>
       html,
       body {
         position: relative;
@@ -112,7 +112,7 @@
         opacity: var(--swiper-pagination-bullet-opacity, 1);
         background: #000;
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
@@ -168,18 +168,24 @@
       </h1>
     </header>
     <main>
+      
+      <div class="mainTitle">
+        <h3>#PEACH C에서 가장 사랑받는♥</h3>
+        <p>#립&아이 메이크업</p>
+      </div>
+    </div>
       <!-- Swiper -->
-      <div class="swiper mySwiper">
+      <!-- <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide main-1">
-            <!-- <img
+            <img
               src="./project/peachc/common/images/main-bg_01.png"
               alt="main"
             /> -->
-            <div class="mainTitle">
+            <!-- <div class="mainTitle">
               <h3>#PEACH C에서 가장 사랑받는♥</h3>
               <p>#립&아이 메이크업</p>
-            </div>
+            </div> -->
           </div>
           <div class="swiper-slide">
             <!-- <img
@@ -189,7 +195,7 @@
           </div>
         </div>
         <div class="swiper-pagination"></div>
-      </div>
+      </div> -->
     </main>
     <section>
       <div class="banner_mdPICK">
@@ -274,7 +280,7 @@
             />
             <img
               class="itemImg product_PALETTE"
-              src="./project/peachc/common/images/products/a16aa28d8bcd0fef877c8c8091c11a1d.png"
+              src="./project/peachc/common/images/products/set.png"
               alt="PALETTE"
             />
             <div class="innerTitle product_1_innerTitle">
@@ -357,7 +363,6 @@
               <div class="Circle UNDER_Circle">
                 <span class="UNDERUNDER EYE_1"></span>
                 <span class="UNDERUNDER EYE_2"></span>
-                <span class="UNDERUNDER EYE_3"></span>
               </div>
             </div>
             <div class="viewBtn product_UNDEREYE_Btn">
@@ -375,19 +380,18 @@
           <div class="product_inner product_4">
             <div class="innerTitle product_4_innerTitle">
               <h3>
-                PEACH C TUNING<br />
-                BRUSH SET
+                PEACH C FEATHERY<br />
+                FIXXYCARA
               </h3>
-              <p>#베이직사이즈 #고급인조모 #메이크업필수템</p>
-              <div class="Circle BRUSH_Circle">
-                <span class="BRUSH BRUSH_1"></span>
-                <span class="BRUSH BRUSH_2"></span>
-                <span class="BRUSH BRUSH_3"></span>
+              <p>#워터프루프 #라이트포뮬라 #깔끔컬링 #슬림브러쉬</p>
+              <div class="Circle mascara_Circle">
+                <span class="mascara mascara_1"></span>
+                <span class="mascara mascara_2"></span>
               </div>
             </div>
             <img
-              class="itemImg product_BRUSH"
-              src="./project/peachc/common/images/products/tunningbrushset_01.png"
+              class="itemImg product_mascara"
+              src="./project/peachc/common/images/products/mascara.png"
               alt="PALETTE"
             />
             <img
@@ -396,7 +400,7 @@
               alt="slimwaterprooffixxyliner"
             />
 
-            <div class="viewBtn product_BRUSH_Btn">
+            <div class="viewBtn product_mascara_Btn">
               <p>MORE VIEW</p>
               <div class="arrowbtn">
                 <img
@@ -411,12 +415,65 @@
       </div>
       <div class="about_banner">
         <div class="aboutTitle top">
-          <h2 class="big">PEACH C,</h2>
-          <h2 class="font">Find Your</h2>
+          <h2 class="big">PEACH C,
+            <div class="about_Product hoverEV_1">
+              <img
+                class="hoverEV_replaypink"
+                src="./project/peachc/common/images/products/replaypink.png"
+                alt="replaypink"
+              />
+              <img
+                class="hoverEV_GLITTER_PH"
+                src="./project/peachc/common/images/products/GLITTER_PH.png"
+                alt="GLITTER_PH"
+              />
+              <img
+                class="hoverEV_MASCARA_BLUE"
+                src="./project/peachc/common/images/products/MASCARA_BLUE.png"
+                alt="MASCARA_BLUE"
+              />
+            </div>
+          </h2>
+          <h2 class="sm">Find Your
+            <div class="about_Product hoverEV_2">
+              <img
+                class="hoverEV_tint"
+                src="./project/peachc/common/images/products/tint.png"
+                alt="tint"
+              />
+              <img
+                class="hoverEV_custion"
+                src="./project/peachc/common/images/products/custion.png"
+                alt="custion"
+              />
+              <img
+                class="hoverEV_tunningbrushset03"
+                src="./project/peachc/common/images/products/tunningbrushset_03.png"
+                alt="tunningbrushset_03"
+              />
+            </div>
+          </h2>
         </div>
         <div class="aboutTitle bottom">
-          <h2 class="mg font">Love</h2>
-          <h2 class="font">liness!</h2>
+          <h2 class="mg font">Love&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;liness!
+            <div class="about_Product hoverEV_3">
+            <img
+              class="hoverEV_MASCARA_PINK"
+              src="./project/peachc/common/images/products/MASCARA_PINK.png"
+              alt="MASCARA_PINK"
+            />
+            <img
+              class="hoverEV_mauvewave"
+              src="./project/peachc/common/images/products/mauvewave.png"
+              alt="mauvewave"
+            />
+            <img
+              class="hoverEV_base"
+              src="./project/peachc/common/images/products/base.png"
+              alt="base"
+            />
+          </div>
+        </h2>
         </div>
         <div class="mention">
           <p>
@@ -425,11 +482,12 @@
             그리고 당신을 그런 사람이 될 수 있도록 도와줄게요.
           </p>
         </div>
-        <div class="about_Product">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-        </div>
+        <img
+          class="slide_modal"
+          src="./project/peachc/common/images/modal/PALETTE_lay_04.jpg"
+          alt="PALETTE_lay_04"
+        />
+        
         <img
           class="slide_modal"
           src="./project/peachc/common/images/modal/PALETTE_lay_04.jpg"
@@ -446,15 +504,119 @@
           </div>
         </div>
       </div>
+      <div class="slideAni">
+        <div class="flow-container">
+          <div class="PortfolioBox">
+            <p class="PortfolioText">
+              &nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="review_banner">
+        <div class="title">
+          <h3>
+            <span>Review</span>
+          </h3>
+        </div>
+        <div class="review_Box">
+          <div class="review_Menu">
+            <ul>
+              <li><a href="#">All</a></li>
+              <li><a href="#">Face</a></li>
+              <li><a href="#">Eye</a></li>
+              <li><a href="#">Lip</a></li>
+              <li><a href="#">Lip</a></li>
+            </ul>
+          </div>
+          <!-- Swiper -->
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="https://cdn.magloft.com/github/swiper/images/page-001.jpg"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://cdn.magloft.com/github/swiper/images/page-002.jpg"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://cdn.magloft.com/github/swiper/images/page-003.jpg"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://cdn.magloft.com/github/swiper/images/page-004.jpg"
+                />
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-scrollbar"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </div>
+      <div class="instagram">
+        <div class="title">
+          <p>@peachc_official</p>
+          <h3>
+            <span>Instagram</span>
+          </h3>
+        </div>
+        <div class="instagram_Box">
+          <div class="feed feed_1">
+            <a href="#"><img src="./project/peachc/common/images/insta/lay1.jpg" alt="lay1"></a>
+          </div>
+          <div class="feed feed_1">
+            <a href="#"><img src="./project/peachc/common/images/insta/lay1.jpg" alt="lay1"></a>
+          </div>
+        </div>
+      </div>
     </section>
+    <!-- Swiper JS -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
+
+    <!-- Initialize Swiper -->
+    <!-- <script>
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+        },
+      });
+    </script> -->
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        centeredSlides: false,
+        slidesPerGroupSkip: 1,
+        grabCursor: true,
+        keyboard: {
+          enabled: true,
+        },
+        breakpoints: {
+          769: {
+            slidesPerView: 2,
+            slidesPerGroup: 2,
+          },
+        },
+        scrollbar: {
+          el: ".swiper-scrollbar",
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
         pagination: {
           el: ".swiper-pagination",
+          clickable: true,
         },
       });
     </script>
