--- a/peachc.html
+++ b/peachc.html
@@ -119,9 +119,9 @@
     <header>
       <div class="headerBox1">
         <ul class="Menu">
-          <li class="menu_Main text_doc"><a href="/index.html">BRAND</a></li>
-          <li class="menu_Work text_doc"><a href="#">SHOP</a></li>
-          <li class="menu_About text_doc"><a href="#">REVIEW</a></li>
+          <li class="menu_Main text_doc"><a href="https://peachc.kr/about.html">BRAND</a></li>
+          <li class="menu_Work text_doc"><a href="https://peachc.kr/product/list.html?cate_no=24">SHOP</a></li>
+          <li class="menu_About text_doc"><a href="https://peachc.kr/board/product-01/list.html?board_no=4">REVIEW</a></li>
         </ul>
         <h1 class="headerLogo_2">
           <a onClick="window.location.reload()" href="/peachc.html"
@@ -244,7 +244,7 @@
           </div>
         </div>
         <div class="viewBtn banner_md_Btn">
-          <p>MORE VIEW</p>
+          <p class="text_doc">MORE VIEW</p>
           <div class="arrowbtn">
             <img
               class="arrow"
@@ -296,7 +296,7 @@
               </div>
             </div>
             <div class="viewBtn product_PALETTE_Btn">
-              <p>MORE VIEW</p>
+              <p class="text_doc">MORE VIEW</p>
               <div class="arrowbtn">
                 <img
                   class="arrow"
@@ -332,7 +332,7 @@
             />
 
             <div class="viewBtn product_liner_Btn">
-              <p>MORE VIEW</p>
+              <p class="text_doc">MORE VIEW</p>
               <div class="arrowbtn">
                 <img
                   class="arrow"
@@ -366,7 +366,7 @@
               </div>
             </div>
             <div class="viewBtn product_UNDEREYE_Btn">
-              <p>MORE VIEW</p>
+              <p class="text_doc">MORE VIEW</p>
               <div class="arrowbtn">
                 <img
                   class="arrow"
@@ -401,7 +401,7 @@
             />
 
             <div class="viewBtn product_mascara_Btn">
-              <p>MORE VIEW</p>
+              <p class="text_doc">MORE VIEW</p>
               <div class="arrowbtn">
                 <img
                   class="arrow"
@@ -494,7 +494,7 @@
           alt="PALETTE_lay_04"
         />
         <div class="viewBtn about_Btn">
-          <p>MORE VIEW</p>
+          <p class="text_doc">MORE VIEW</p>
           <div class="arrowbtn">
             <img
               class="arrow"
@@ -514,14 +514,14 @@
         </div>
       </div>
       <div class="review_banner">
-        <div class="title">
-          <h3>
-            <span>Review</span>
-          </h3>
-        </div>
         <div class="review_Box">
-          <div class="review_Menu">
-            <ul>
+          <div class="review_title">
+            <div class="title">
+              <h3>
+                <span>Review</span>
+              </h3>
+            </div>
+            <ul class="review_Menu">
               <li><a href="#">All</a></li>
               <li><a href="#">Face</a></li>
               <li><a href="#">Eye</a></li>
@@ -569,13 +569,47 @@
         </div>
         <div class="instagram_Box">
           <div class="feed feed_1">
-            <a href="#"><img src="./project/peachc/common/images/insta/lay1.jpg" alt="lay1"></a>
+            <a href="https://www.instagram.com/p/Coqe-uDyvcH/"><img src="./project/peachc/common/images/insta/Artboard 4.png" alt="Artboard 4">
+              <span>♥</span></a>
           </div>
-          <div class="feed feed_1">
-            <a href="#"><img src="./project/peachc/common/images/insta/lay1.jpg" alt="lay1"></a>
+          <div class="feed feed_2">
+            <a href="https://www.instagram.com/p/CoY9Yz_rfy4/"><img src="./project/peachc/common/images/insta/Artboard 1.png" alt="Artboard 1">
+              <span>♥</span></a>
+          </div>
+          <div class="feed feed_3">
+            <a href="https://www.instagram.com/p/Con6YVXSJTP/"><img src="./project/peachc/common/images/insta/Artboard 2.png" alt="Artboard 2">
+              <span>♥</span></a>
+          </div>
+          <div class="feed feed_4">
+            <a href="https://www.instagram.com/p/CR3QZ8-srtp/"><img src="./project/peachc/common/images/insta/Artboard 5.png" alt="Artboard 5">
+              <span>♥</span></a>
+          </div>
+          <div class="feed feed_5">
+            <a href="https://www.instagram.com/p/ColVru6SuDp/"><img src="./project/peachc/common/images/insta/Artboard 3.png" alt="Artboard 3">
+              <span>♥</span></a>
           </div>
         </div>
       </div>
+
+      <footer>
+        <h2><a href="./peachc.html"><img src="./project/peachc/common/images/logo/main-logo.png" alt="logo"></a></h2>
+        <div class="footerTitle">
+          <div class="inner_title">
+            <p><strong>주식회사:</strong> 에스와이씨에스<br>07220 서울특별시 영등포구 당산로38길 16 (당산동4가) 석청빌딩 4층 401호<br><strong>대표이사:</strong> 김성진<Br><strong>사업자등록번호:</strong> 687-88-02540<br><strong>통신판매업신고:</strong> 2022-서울영등포-3051  [사업자정보확인]</p>
+              <p class="copyright">COPYRIGHT ⓒ 2022 PEACH C. Find Your Loveliness</p>
+          </div>
+          <div class="inner_talk">
+            <div class="inner_service">
+              <p><strong>고객센터 운영시간: 월~금 9:00 ~ 16:00 (점심시간: 11:30~12:30) <span>*휴무-토, 일 및 공휴일</strong></span><br><strong>무통장 입금계좌:</strong> 신한은행 100-036-242863 (주)에스와이씨에스 김성진<br><strong>전화:</strong> 02-6925-1563 <strong>이메일:</strong> admin@peachc.co.kr</p>
+            </div>
+            
+              <div class="inner_sns">
+                <a href="https://www.instagram.com/peachc_official/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z"/></svg></a>
+                <a href="https://www.facebook.com/profile.php?id=100070743467463"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"/></svg></a>
+              </div>
+          </div>
+        </div>
+      </footer>
     </section>
     <!-- Swiper JS -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
