--- a/peachc.html
+++ b/peachc.html
@@ -199,8 +199,8 @@
     </main>
     <section>
       <div class="banner_mdPICK">
-        <h2 class="mdPICKTitle mdPICKTitle_rt">MD’S pick</h2>
-        <h2 class="mdPICKTitle mdPICKTitle_lf">IVE REI</h2>
+        <h2 class="mdPICKTitle mdPICKTitle_rt title_right">MD’S pick</h2>
+        <h2 class="mdPICKTitle mdPICKTitle_lf title_left">IVE REI</h2>
         <div class="imageBox">
           <img
             class="PALETTE07"
@@ -237,21 +237,22 @@
             />
           </div>
           <div class="productImg item_replaypink">
-            <img
+            <img class="title_top"
               src="./project/peachc/common/images/products/replaypink.png"
               alt="replaypink"
             />
           </div>
         </div>
         <div class="viewBtn banner_md_Btn">
-          <p class="text_doc">MORE VIEW</p>
-          <div class="arrowbtn">
-            <img
-              class="arrow"
-              src="./project/peachc/common/images/arrow.svg"
-              alt="arrow"
-            />
-          </div>
+          <a href="https://peachc.kr/product/%EC%8B%9C%EC%A6%88%EB%84%90-%EB%B8%94%EB%A0%8C%EB%94%A9-%EC%95%84%EC%9D%B4%EC%84%80%EB%8F%84%EC%9A%B0-%ED%8C%94%EB%A0%88%ED%8A%B8/38/category/25/display/1/"><p class="text_doc">MORE VIEW</p>
+            <div class="arrowbtn">
+              <img
+                class="arrow"
+                src="./project/peachc/common/images/arrow.svg"
+                alt="arrow"
+              />
+            </div>
+          </a>
         </div>
       </div>
       <div class="slideAni">
@@ -272,7 +273,7 @@
           </h3>
         </div>
         <div class="products_Box">
-          <div class="product_inner product_1">
+          <div class="product_inner product_1 fade">
             <img
               class="modal"
               src="./project/peachc/common/images/modal/artboard_palette.png"
@@ -296,18 +297,19 @@
               </div>
             </div>
             <div class="viewBtn product_PALETTE_Btn">
-              <p class="text_doc">MORE VIEW</p>
-              <div class="arrowbtn">
-                <img
-                  class="arrow"
-                  src="./project/peachc/common/images/arrow.svg"
-                  alt="arrow"
-                />
-              </div>
+              <a href="https://peachc.kr/product/%EC%8B%9C%EC%A6%88%EB%84%90-%EB%B8%94%EB%A0%8C%EB%94%A9-%EC%95%84%EC%9D%B4%EC%84%80%EB%8F%84%EC%9A%B0-%ED%8C%94%EB%A0%88%ED%8A%B8/38/category/25/display/1/"><p class="text_doc">MORE VIEW</p>
+                <div class="arrowbtn">
+                  <img
+                    class="arrow"
+                    src="./project/peachc/common/images/arrow.svg"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="product_inner product_2">
+          <div class="product_inner product_2 fade_right">
             <div class="innerTitle product_2_innerTitle">
               <h3>
                 PEACH C SLIM WATERPROOF<br />
@@ -332,18 +334,19 @@
             />
 
             <div class="viewBtn product_liner_Btn">
-              <p class="text_doc">MORE VIEW</p>
-              <div class="arrowbtn">
-                <img
-                  class="arrow"
-                  src="./project/peachc/common/images/arrow.svg"
-                  alt="arrow"
-                />
-              </div>
+              <a href="https://peachc.kr/product/%EC%8A%AC%EB%A6%BC-%EC%9B%8C%ED%84%B0%ED%94%84%EB%A3%A8%ED%94%84-%ED%94%BD%EC%8B%9C%EB%9D%BC%EC%9D%B4%EB%84%88/28/category/25/display/1/"><p class="text_doc">MORE VIEW</p>
+                <div class="arrowbtn">
+                  <img
+                    class="arrow"
+                    src="./project/peachc/common/images/arrow.svg"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="product_inner product_3">
+          <div class="product_inner product_3 fade">
             <img
               class="modal"
               src="./project/peachc/common/images/modal/artboard_UNDEREYE.png"
@@ -366,18 +369,19 @@
               </div>
             </div>
             <div class="viewBtn product_UNDEREYE_Btn">
-              <p class="text_doc">MORE VIEW</p>
-              <div class="arrowbtn">
-                <img
-                  class="arrow"
-                  src="./project/peachc/common/images/arrow.svg"
-                  alt="arrow"
-                />
-              </div>
+              <a href="https://peachc.kr/product/%EC%95%A0%EA%B5%90%EC%82%B4-%EC%B9%98%ED%8A%B8%ED%82%A4-%EB%9D%BC%EC%9D%B4%EB%84%88/50/category/25/display/1/"><p class="text_doc">MORE VIEW</p>
+                <div class="arrowbtn">
+                  <img
+                    class="arrow"
+                    src="./project/peachc/common/images/arrow.svg"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="product_inner product_4">
+          <div class="product_inner product_4 fade_right">
             <div class="innerTitle product_4_innerTitle">
               <h3>
                 PEACH C FEATHERY<br />
@@ -401,14 +405,15 @@
             />
 
             <div class="viewBtn product_mascara_Btn">
-              <p class="text_doc">MORE VIEW</p>
-              <div class="arrowbtn">
-                <img
-                  class="arrow"
-                  src="./project/peachc/common/images/arrow.svg"
-                  alt="arrow"
-                />
-              </div>
+              <a href="https://peachc.kr/product/%ED%94%BC%EB%8D%94%EB%A6%AC-%ED%94%BD%EC%8B%9C%EC%B9%B4%EB%9D%BC/36/category/25/display/1/"><p class="text_doc">MORE VIEW</p>
+                <div class="arrowbtn">
+                  <img
+                    class="arrow"
+                    src="./project/peachc/common/images/arrow.svg"
+                    alt="arrow"
+                  />
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -494,14 +499,15 @@
           alt="PALETTE_lay_04"
         />
         <div class="viewBtn about_Btn">
-          <p class="text_doc">MORE VIEW</p>
-          <div class="arrowbtn">
-            <img
-              class="arrow"
-              src="./project/peachc/common/images/arrow.svg"
-              alt="arrow"
-            />
-          </div>
+          <a href="https://peachc.kr/about.html"><p class="text_doc">MORE VIEW</p>
+            <div class="arrowbtn">
+              <img
+                class="arrow"
+                src="./project/peachc/common/images/arrow.svg"
+                alt="arrow"
+              />
+            </div>
+          </a>
         </div>
       </div>
       <div class="slideAni">
@@ -513,51 +519,78 @@
           </div>
         </div>
       </div>
-      <div class="review_banner">
-        <div class="review_Box">
-          <div class="review_title">
-            <div class="title">
-              <h3>
-                <span>Review</span>
-              </h3>
-            </div>
-            <ul class="review_Menu">
-              <li><a href="#">All</a></li>
-              <li><a href="#">Face</a></li>
-              <li><a href="#">Eye</a></li>
-              <li><a href="#">Lip</a></li>
-              <li><a href="#">Lip</a></li>
-            </ul>
+      <div class="review_Box">
+        <div class="review_title">
+          <div class="title">
+            <h3>
+              <span>Review</span>
+            </h3>
           </div>
-          <!-- Swiper -->
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img
-                  src="https://cdn.magloft.com/github/swiper/images/page-001.jpg"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="https://cdn.magloft.com/github/swiper/images/page-002.jpg"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="https://cdn.magloft.com/github/swiper/images/page-003.jpg"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="https://cdn.magloft.com/github/swiper/images/page-004.jpg"
-                />
+          <ul class="review_Menu">
+            <li class="reviewMenu All">All</li>
+            <li class="reviewMenu Face">Face</li>
+            <li class="reviewMenu Eye">Eye</li>
+            <li class="reviewMenu Lip">Lip</li>
+          </ul>
+        </div>
+        <!-- Swiper -->
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide AllBox">
+              <img
+                src="./project/peachc/common/images/products/tints.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>리버 글로우 틴트</h3>
+                <p>친구가 제가 쓰고 있는 틴트 바르고<br> 마음에 든다고 해서 선물해 줬는데<br> 배송도 빠르고 너무 좋아요!<br>다음번에도 주문 할게요!</p>
               </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-scrollbar"></div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-slide AllBox">
+              <img
+                src="./project/peachc/common/images/products/a16aa28d8bcd0fef877c8c8091c11a1d.png"
+              />
+              <div class="review_mention AllBox">
+                <span>★★★★★ </span>
+                <h3>시즈널 블렌딩<br>아이섀도우 팔레트</h3>
+                <p>어디에서도 볼수없는 예쁜 컬러...<br> 글리터도 너무 반짝여서<br>최고에요 ㅠㅠ</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img class="liner"
+                src="./project/peachc/common/images/products/slimwaterprooffixxyliner.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>슬림 워터프루프 픽시라이너</h3>
+                <p>10개째 쓰고 있어요~~<br>절대 안지워지고 자연스러운 발색 <br>너무 좋아요!!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img class="mascara"
+                src="./project/peachc/common/images/products/mascara.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>피더리 픽시카라</h3>
+                <p>생각치도 못하게 인생템 얻었어요!<br> 컬링도 고정력도 좋아서<br> 데일리템으로 찰떡입니다!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./project/peachc/common/images/products/custion.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>꿀복숭아 쿠션</h3>
+                <p>옅게 화장할때 잘 쓰고 있어요~<br>좋아요!</p>
+              </div>
+            </div>
           </div>
+          <!-- <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div> -->
+          <div class="swiper-scrollbar"></div>
+          <!-- <div class="swiper-pagination"></div> -->
         </div>
       </div>
       <div class="instagram">
